# psychic-octo-guide

./: README_SCOTLAND2.md  settings.gradle
.github/workflows/: build-so.yml  build-windows-sml2.yml  extract-root-zip.yml  tostare
PCMod/: PCMod.csproj  Plugin.cs
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  libmoxxie.cpp  native-lib.cpp
app/src/main/cpp/Include/: BNMIncludes.hpp  BNMResolve.hpp  ModInclude.hpp  PhotonResolve.hpp  XRInput.cpp  XRInput.hpp  httplib.h
app/src/main/cpp/Include/Menu/: ButtonInfo.hpp  Buttons.hpp  MenuManager.hpp  ModMenu.cpp  ModMenu.hpp  Settings.cpp  Settings.hpp
app/src/main/cpp/Include/Mods/: GunLib.hpp  Movement.hpp  Overpowered.hpp  Photon.hpp  Player.hpp  Visuals.hpp
app/src/main/cpp/Include/NotiLib/: NotiLib.cpp  NotiLib.hpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
